[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-openai-api"
version = "0.1.0"
description = "A fast api with piper that crates openai api"
readme = "README.md"
authors = [
    {name = "Jesper Kristensen", email = "jeskr@aarhus.dk"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "piper-tts>=1.3.0",
    "onnxruntime-gpu>=1.22.0",
    "fastapi>=0.116.1",
    "pydub>=0.25.1",
    "uvicorn>=0.35.0",
    "langdetect>=1.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"